--- a/form.html
+++ b/form.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="jquery.js"></script> 
+        <script> 
+        $(function(){
+          $("#includedContent").load("./sub_button/button.html"); 
+        });
+        </script> 
+    </head>
 <body>
 
 <h1>The button form attribute</h1>
@@ -12,7 +20,7 @@
 </form>
 
 <p>The button below is outside the form element, but still part of the form.</p>
-
+<object type="text/html" data="./sub_button/button.html"></object>
 
 </body>
 </html>
